--- a/templates/cliente/ver_cliente.html
+++ b/templates/cliente/ver_cliente.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="#" type="image/x-icon">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/ver_cliente/main.css') }}" class="css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/cliente/ver_cliente/main.css') }}" class="css">
     <title>Sistema de Ordem de Serviço</title>
 </head>
 
