Update da pagina inicial e separacao dos clientes e das ordens

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <h2>Sistema de Ordem de Serviço</h2>
-    <a href="{{ url_for('listar_clientes') }}">Listar Clientes</a>
-    <a href="{{ url_for('criar_cliente') }}">Criar Cliente</a>
+    <a href="{{ url_for('cliente') }}">Clientes</a>
+    <a href="{{ url_for('ordem') }}">Ordem</a>
 </body>
 
 </html>
