Adição de texto na label em falta

--- a/templates/cliente/editar_cliente.html
+++ b/templates/cliente/editar_cliente.html
@@ -18,7 +18,7 @@
         <form method="post">
             <label for="nome">Nome:</label>
             <input type="text" name="nome" id="nome" value="{{ cliente.nome if cliente else '' }}" required><br>
-            <label for="endereco"></label>
+            <label for="endereco">Endereço:</label>
             <input type="text" name="endereco" id="endereco" value="{{ cliente.endereco if cliente else '' }}"
                 required><br>
             <label for="contacto">Contacto:</label>
